<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

<LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:divider="@null"
        />
    <RelativeLayout
        android:id="@+id/emptycartview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


       >

        <pl.droidsonroids.gif.GifTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:id="@+id/gif"
            android:layout_centerHorizontal="true"
            android:background="@drawable/empty"
            />
        <co.jlabs.cersei_retailer.custom_components.TextViewModernM
            android:layout_width="wrap_content"
            android:layout_below="@+id/gif"
            android:id="@+id/emty"
            android:textColor="#000"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            app:fontname="lb"
            android:padding="10dp"
            android:text="Empty Cart !"
            android:layout_height="wrap_content" />
        <co.jlabs.cersei_retailer.custom_components.TextViewModernM
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emty"
            android:textColor="#000"
            android:id="@+id/desc"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/empty"/>
        <co.jlabs.cersei_retailer.custom_components.ButtonModarno
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:padding="15dp"
            android:textSize="15sp"
            android:id="@+id/back_to_offers"
            android:layout_margin="15dp"
            android:layout_below="@+id/desc"
            android:background="@color/colorPrimary"
            android:text="Back to Offers"/>
        <co.jlabs.cersei_retailer.custom_components.TextViewModernM
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/back_to_offers"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/desc"/>



    </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_checkout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_gravity="bottom">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/orange_dark">

            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:id="@+id/cart">

                <co.jlabs.cersei_retailer.custom_components.TextView_White
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:typeface="serif"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:paddingLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/ico_cart" />
                <TextView
                    android:gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:textColor="#fff"
                    android:text="0"
                    android:textSize="11sp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/num_of_items_in_cart"
                    android:layout_gravity="right"
                    android:background="@drawable/round_circle"/>
            </FrameLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                android:paddingLeft="10dp"
                android:layout_margin="10dp"
                android:id="@+id/slab"
                android:layout_toRightOf="@+id/cart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rupee"
                android:layout_toRightOf="@+id/slab"
                android:textColor="#F5F5F5"
                android:id="@+id/currency"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_toRightOf="@+id/currency"
                android:textColor="#F5F5F5"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textSize="17sp"
                android:id="@+id/money_foot"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="CHECK OUT"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_alignParentRight="true"
                android:textColor="#F5F5F5"
                android:id="@+id/checkout"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                android:background="@color/orange_more_dark"
                />

        </RelativeLayout>

        <!--<TextView-->
            <!--android:id="@+id/num_of_items_in_cart"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="20sp"-->
            <!--android:textStyle="bold"-->
            <!--android:padding="7dp"-->
            <!--android:text="Total 0 items"/>-->
    </LinearLayout>

</LinearLayout>
</LinearLayout>
</LinearLayout>